# esp32_idf_lvgl_porting

./: .gitmodules  README.md  sdkconfig  sdkconfig.old
components/espressif__esp_lcd_ili9341/: esp_lcd_ili9341.c
components/lvgl__lvgl/src/: lv_conf_internal.h
components/lvgl__lvgl/src/misc/: lv_color.h
components/lvgl__lvgl/src/widgets/: lv_img.c
main/: CMakeLists.txt  button.c  button.h  lvgl_setting.c  lvgl_setting.h  main.c
main/gui/: CMakeLists.txt  esp.code-workspace  ui_boot_animate.c  ui_main.c  ui_main.h
main/gui/image/: esp_logo.c  esp_text.c  icon_air_switch_off.c  icon_air_switch_on.c  icon_degree.c  icon_dev_ctrl.c  icon_esp_sensor_base.c  icon_fan_off.c  icon_fan_on.c  icon_help.c  icon_humidity.c  icon_media_player.c  icon_network.c  icon_percent.c  icon_rader_off.c  icon_rader_on.c  icon_rmaker.c  icon_sensor_monitor.c  icon_temp.c  media_off.c  media_on.c
main/ui/: ui.c  ui.h
main/ui/images/: ui_img_logo_png.c
main/ui/screens/: ui_Screen1.c
